--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -218,6 +218,25 @@
 		});
 	</script>
 
+      <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
+
+    <script type="text/javascript">
+	$('#defaultIndeterminate').prop('indeterminate', true)
+
+	var toggleCheckbox = function(){
+		$('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
+		$('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
+	}
+
+	var toggleRadio = function (){
+		$('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
+		$('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
+	}
+
+
+
+    </script>
+
 
 
 {% endblock %}
