--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -11,128 +11,145 @@
 {% endblock %}
 {% block main %}
 
-     <div class="subheader">
-        <h1 class="subheader-title">
+<div class="panel-container show">
+    <div class="header">
+         <h1 class="header-title">
             <i class='far fa-handshake'></i> Terceros: <span class='fw-300'>Agregar</span>
-            <small>
+             <br>
+             <br>
+         </h1>
 
-            </small>
-        </h1>
-        <div class="subheader-block">
-
-        </div>
     </div>
+    <div class="row">
+        <div class="col-xl-12">
+            <div id="panel-1" class="panel">
+
+                <div class="panel-container show">
+                    <div class="panel-content">
+
+                        <div class="panel-group">
+                            <div class="panel-body">
+                                {% if error %}
+                                    <div class="alert alert-danger alert-dismissible fade show">
+                                        <strong>{{ error }}</strong>
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                {% endif %}
+                                <form action="{% url 'Administracion:terceros-crear' %}" id="tercero" method="post">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <label for="tercero_name">Nombre</label>
+                                                <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="tercero_identificacion">Identificación</label>
+                                                <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese número de identificación" required maxlength="20" value="{{ tercero.identificacion }}">
+                                             </div>
+                                             <div class="col-md-6">
+                                             <br>
+                                                <label for="tipo_identificacion_select">Tipo de Identificación</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
+                                                    <option value="" >Seleccione un Tipo de Identificación</option>
+                                                    {% for tipo_id in tipo_identificacion %}
+                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                             <br>
+                                                <label for="empresa_select">Empresa</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
+                                                    <option value="" >Seleccione una empresa</option>
+                                                    {% for tipo_id in empresas %}
+                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                             <br>
+                                                <label for="tipo_terceros_select">Tipo Terceros</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_terceros_select" name="tipo_tercero_id" required>
+                                                    <option value="" >Seleccione un Tipo de Tercero</option>
+                                                    {% for tipo_id in tipo_terceros %}
+                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                             <br>
+                                                <label for="centro_poblado_select">Departamento</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
+                                                    <option value="" >Seleccione un Departamento</option>
+                                                   {% for departamento in departamentos %}
+                                                        <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                             <br>
+                                                <label for="centro_poblado_select">Municipio</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
+                                                    <option value="" >Seleccione un Municipio</option>
+                                                    {% for municipio in municipios %}
+                                                        <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                             <br>
+                                                <label for="centro_poblado_select">Centro Poblado</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
+                                                    <option value="" >Seleccione un Centro Poblado</option>
+                                                     {% for c_poblado in c_poblados %}
+                                                        <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
+                                                    {% endfor %}
+
+                                                </select>
+                                            </div>
+
+                                        </div>
+
+                                    </div>
 
 
-            <div class="panel-group">
-                <div class="panel-body">
-                    {% if error %}
-                        <div class="alert alert-danger alert-dismissible fade show">
-                            <strong>{{ error }}</strong>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    {% endif %}
-                    <form action="{% url 'Administracion:terceros-crear' %}" id="tercero" method="post">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <label for="tercero_name">Nombre</label>
-                                    <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="tercero_identificacion">Identificación</label>
-                                    <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese número de identificación" required maxlength="20" value="{{ tercero.identificacion }}">
-                                 </div>
-                                 <div class="col-md-6">
-                                 <br>
-                                    <label for="tipo_identificacion_select">Tipo de Identificación</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
-                                        <option value="" >Seleccione un Tipo de Identificación</option>
-                                        {% for tipo_id in tipo_identificacion %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="empresa_select">Empresa</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
-                                        <option value="" >Seleccione una empresa</option>
-                                        {% for tipo_id in empresas %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="tipo_terceros_select">Tipo Terceros</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_terceros_select" name="tipo_tercero_id" required>
-                                        <option value="" >Seleccione un Tipo de Tercero</option>
-                                        {% for tipo_id in tipo_terceros %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Departamento</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="centro_poblado_id" required>
-                                        <option value="" >Seleccione un Departamento</option>
-                                        {% for departamento in departamentos %}
-                                            <option value="{{ departamento.id }}">{{ departamento.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Municipio</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="centro_poblado_id" required>
-                                        <option value="" >Seleccione un Municipio</option>
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                 <br>
-                                    <label for="centro_poblado_select">Centro Poblado</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
-                                        <option value="" >Seleccione un Centro Poblado</option>
-
-                                    </select>
-                                </div>
-
+                                    <div class="form-row">
+                                        <div>
+                                            <button id="agregar" class="btn btn-primary btn-block">Agregar</button>
+                                        </div>
+                                        <div style="padding-left: 15px">
+                                            <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-
                         </div>
-
-
-                        <div class="form-row">
-                            <div>
-                                <button id="agregar" class="btn btn-primary btn-block">Agregar</button>
-                            </div>
-                            <div style="padding-left: 15px">
-                                <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
-                            </div>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
 {% block scripts %}
 
 
-    <script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
-    <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js'%}"></script>
-    <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+<script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/vendors.bundle.js'%}"></script>
+<script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
     <script>
 		$(document).ready(function () {
 			$(function() {
@@ -248,5 +265,7 @@
 
 
     </script>
+
+
 
 {% endblock %}
