--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -9,156 +9,143 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
 {% endblock %}
 {% block main %}
-
-     <div class="subheader">
-        <h1 class="subheader-title">
+<div class="panel-container show">
+    <div class="header">
+         <h1 class="header-title">
             <i class='far fa-handshake'></i> Terceros: <span class='fw-300'>Editar</span>
-            <small>
+             <br>
+             <br>
+         </h1>
 
-            </small>
-        </h1>
-        <div class="subheader-block">
-
-        </div>
     </div>
+    <div class="row">
+        <div class="col-xl-12">
+            <div id="panel-1" class="panel">
 
-            <div class="panel-group">
-                <div class="panel-body">
+                <div class="panel-container show">
+                    <div class="panel-content">
 
-                    <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" >
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <label for="empleado_name">Nombre</label>
-                                    <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="empleado_last_name">Identificación</label>
-                                    <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese el número de identificación" required maxlength="15" value="{{ tercero.identificacion }}">
-                                </div>
-                            </div>
-                        </div>
+                        <div class="panel-group">
+                            <div class="panel-body">
 
-                        <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <label for="tipo_identificacion_select">Tipo de Identificación</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
-                                        <option value="" >Seleccione un Tipo de Identificación</option>
-                                        {% for tipo_id in tipo_identificaciones %}
-                                            <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="empresa_select">Empresa</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
-                                        <option value="" >Seleccione una Empresa</option>
-                                        {% for empresa in empresas %}
-                                            <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="form-row">
-
-                                <div class="col-md-6">
-
-                                    <label for="cargo_select">Tipo Terceros</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="tipo_select" name="tipo_tercero_id" required>
-                                        <option value="" >Seleccione un Tipo de Tercero</option>
-                                        {% for tipo in tipo_terceros %}
-                                            <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                 <div class="col-md-6">
-
-                                    <label for="departamento_select">Departamento</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="departamento_id" required>
-                                        <option value="" >Seleccione un Departamento</option>
-                                        {% for departamento in departamentos %}
-                                            <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <br>
-                                    <label for="municipio_select">Municipio</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="municipio_id" required>
-                                         {% for municipio in municipios %}
-                                            <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-md-6">
-                                    <br>
-                                    <label for="centro_poblado_select">Centro Poblado</label>
-                                    <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
-                                         {% for c_poblado in c_poblados %}
-                                            <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                         <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <div class="custom-control custom-switch">
-                                        <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
-                                        <label class="custom-control-label" for="defaultChecked">Estado</label>
-							            </div>
+                                <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" >
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <label for="empleado_name">Nombre</label>
+                                                <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="empleado_last_name">Identificación</label>
+                                                <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese el número de identificación" required maxlength="15" value="{{ tercero.identificacion }}">
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
+
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <label for="tipo_identificacion_select">Tipo de Identificación</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_identificacion_select" name="tipo_identificacion_id" required>
+                                                    <option value="" >Seleccione un Tipo de Identificación</option>
+                                                    {% for tipo_id in tipo_identificaciones %}
+                                                        <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="empresa_select">Empresa</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="empresa_select" name="empresa_id" required>
+                                                    <option value="" >Seleccione una Empresa</option>
+                                                    {% for empresa in empresas %}
+                                                        <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="form-row">
+
+                                            <div class="col-md-6">
+
+                                                <label for="cargo_select">Tipo Terceros</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="tipo_select" name="tipo_tercero_id" required>
+                                                    <option value="" >Seleccione un Tipo de Tercero</option>
+                                                    {% for tipo in tipo_terceros %}
+                                                        <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                             <div class="col-md-6">
+
+                                                <label for="departamento_select">Departamento</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="departamento_select" name="departamento_id" required>
+                                                    <option value="" >Seleccione un Departamento</option>
+                                                    {% for departamento in departamentos %}
+                                                        <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="municipio_select">Municipio</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="municipio_select" name="municipio_id" required>
+                                                     {% for municipio in municipios %}
+                                                        <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <br>
+                                                <label for="centro_poblado_select">Centro Poblado</label>
+                                                <select class="select2 form-control w-100 select2-selection--single" id="centro_poblado_select" name="centro_poblado_id" required>
+                                                     {% for c_poblado in c_poblados %}
+                                                        <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                     <div class="form-group">
+                                        <div class="form-row">
+                                            <div class="col-md-6">
+                                                <div class="custom-control custom-switch">
+                                                    <div class="custom-control custom-checkbox">
+                                                    <input type="checkbox" class="custom-control-input" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
+                                                    <label class="custom-control-label" for="defaultChecked">Estado</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div >
+                                            <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
+                                        </div>
+                                        <div style="padding-left: 15px">
+                                            <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div >
-                                <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
-                            </div>
-                            <div style="padding-left: 15px">
-                                <a href="{% url 'Administracion:terceros' %}" class="btn btn-danger btn-block">Cancelar</a>
-                            </div>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 {% block scripts %}
-
-{#      <!-- Custom styles for Widgets of calendar-->#}
-{#    <link href="{% static 'EVA/Plantilla/css/jquery-ui.min.css' %}" rel="stylesheet" type="text/css">#}
-{#    <script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>#}
-{#    <script type="text/javascript">#}
-{#        $(function(){#}
-{#            $("#fecha_creacion").datepicker({#}
-{#                changeMonth:true,#}
-{#                changeYear:true,#}
-{#                dateFormat: 'yy-mm-dd'#}
-{#            });#}
-{#        })#}
-{#    </script>#}
-{##}
-{#     <script type="text/javascript">#}
-{#        $(function(){#}
-{#            $("#fecha_modificacion").datepicker({#}
-{#                changeMonth:true,#}
-{#                changeYear:true,#}
-{#                dateFormat: 'yy-mm-dd'#}
-{#            });#}
-{#        })#}
-{#    </script>#}
 
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 	<script>
@@ -272,8 +259,5 @@
 		$('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
 		$('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
 	}
-
-
-
     </script>
 {% endblock %}
