--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -4,7 +4,7 @@
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="d-flex flex-row align-items-center">
                 <span class="status status-success mr-3">
-                    <span class="rounded-circle profile-image d-block " style="background-image:url({% static ruta_foto %}); background-size: cover;"></span>
+                    <span class="rounded-circle profile-image d-block " style="background-image:url({% static 'EVA/Plantilla/img/thumbs/pic-1.png' %}); background-size: cover;"></span>
                 </span>
                 <div class="info-card-text flex-1">
                     <a href="javascript:void(0);" class="fs-xl text-truncate text-truncate-lg text-info" data-toggle="dropdown" aria-expanded="false">
@@ -12,8 +12,9 @@
                         <i class="fal fa-angle-down d-inline-block ml-1 fs-md"></i>
                     </a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-perfil' id_tarjeta %}">Ver perfil</a>
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-editar' id_tarjeta %}">Editar</a>
-                        <a class="dropdown-item" href="#">Crear Cita</a>
+                        <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_tarjeta }}"   onclick="fConfirmarEliminarColaborador({{ id_tarjeta }})">Eliminar</a>
                         <a class="dropdown-item" href="#">Bloquear</a>
                     </div>
                     <span class="text-truncate text-truncate-xl">{{ cargo }}</span>
@@ -26,12 +27,11 @@
         </div>
         <div class="card-body p-0 collapse show">
             <div class="p-3">
-                <a href="tel:+13174562564" class="mt-1 d-block fs-sm fw-400 text-dark">
+                <a href="tel: {{ telefono }}" class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-mobile-alt text-muted mr-2"></i> {{ telefono }}</a>
-                <a href="mailto:oliver.kopyov@smartadminwebapp.com" class="mt-1 d-block fs-sm fw-400 text-dark">
+                <a href="mailto: {{ correo }}" class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-envelope text-muted mr-2"></i> {{ correo }}</a>
-                <address class="fs-sm fw-400 mt-4 text-muted">
-                    <i class="fas fa-map-pin mr-2"></i> {{ ubicacion }}</address>
+                <address class=" text-muted"><i class="fas fa-map-pin mr-2"></i> {{ direccion }}</address>
             </div>
         </div>
     </div>
